Made stylistic changes to sellpage

--- a/public/index.html
+++ b/public/index.html
@@ -18,9 +18,13 @@
     <!-- Fonts  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="https://accounts.google.com/gsi/style">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
     <!-- My stylesheet -->
     <link rel="stylesheet" href="%PUBLIC_URL%/css/styles.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/sellpage-styles.css">
 
     <!-- Meta -->
     <meta charset="UTF-8">
@@ -41,8 +45,8 @@
         <nav>
             <ul>
                 <li><a href="/login">Login</a></li>
-                <li><a href="mailto:buzzbazaar13@gmail.com" target="_blank">Contact</a></li>
-                <li><a href="/userProfile"><i class="fas fa-user"></i> My profile</a></li>
+                <li><a href="mailto:buzzbazaar13@gmail.com" target="_blank">Contact</a></li> -->
+                <!-- <li><a href="/userProfile"><i class="fas fa-user"></i> My profile</a></li>
             </ul>
         </nav>
     </header> -->
