Made modifications and added ForgotPassword fn

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
     <!-- My stylesheet -->
     <link rel="stylesheet" href="%PUBLIC_URL%/css/styles.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/css/sellpage-styles.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/productcard-styles.css">
 
     <!-- Meta -->
     <meta charset="UTF-8">
