modified footer and added deList to product-info

--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
     <!-- STOP HERE -->
     <div id="root"></div>
     <footer>
-        <p>Developed with 💚 by <a href="https://www.linkedin.com/in/muskanmahajan2004/" target="_blank">Muskan</a></p>
+        <p>Developed with 💚 by <a href="https://www.linkedin.com/in/muskanmahajan2004/" target="_blank">Muskan</a> & <a href="https://www.linkedin.com/in/kavya-lalith-71b347276" target="_blank">Kavya</a></p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </body>
