Modified index.html: added meta description

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="College-shopping burning a hole in your pocket? We got you! Buzz Bazaar connects you with legitimate resellers of books, furniture, electricals, etc. on GT campus." />
+
     <title>Buzz Bazaar</title>
+
     <!-- Include jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 
